// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms / ShowMore Default 1`] = `
Array [
  .c0 {
  position: relative;
  overflow: hidden;
  max-height: 200px;
}

.c0::before {
  display: block;
  content: '';
  width: 100%;
  height: 40px;
  position: absolute;
  bottom: 0;
  left: 0;
  margin: 0;
  background: linear-gradient(rgba(255,255,255,0),#FFFFFF);
}

<div
    className="c0"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget pharetra nisi, sed scelerisque lectus. Sed at sem at elit efficitur vestibulum quis id orci. Nunc faucibus enim at nulla porta, vitae luctus lacus fringilla. Cras ut augue pharetra, malesuada purus blandit, dapibus est. Donec dictum dapibus diam tempus luctus. Maecenas lobortis cursus nisl, et convallis orci interdum at. Etiam lacinia tincidunt massa. Curabitur sit amet dolor eu magna condimentum tempus ut eget dolor. Aliquam vehicula mattis ullamcorper. Mauris porta eget tellus eget ultricies. Donec felis magna, imperdiet ac mauris sit amet, maximus vehicula odio. Maecenas vitae nunc non nisi molestie blandit sed vitae lectus. Suspendisse at finibus ex. Fusce accumsan ante faucibus ante porta, sit amet congue lacus venenatis. Sed eu ultricies nisl. Proin sapien urna, molestie eget ullamcorper eget, rhoncus eu ante. Vestibulum non urna vel diam cursus pretium a ut turpis. Nulla cursus neque velit, non pharetra leo commodo a. Proin risus est, convallis nec mauris non, lobortis vulputate nisl. Praesent hendrerit elit in nisl pharetra, a volutpat eros lacinia.
  </div>,
  .c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  margin-left: 4px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c2"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c3"
        >
          Show more
          <svg
            aria-hidden="true"
            className="c4 c5 c6"
            direction="down"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Organisms / ShowMore With Ellipsis 1`] = `
Array [
  .c0 {
  position: relative;
  overflow: hidden;
  max-height: none;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

<div
    className="c0"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget pharetra nisi, sed scelerisque lectus. Sed at sem at elit efficitur vestibulum quis id orci. Nunc faucibus enim at nulla porta, vitae luctus lacus fringilla. Cras ut augue pharetra, malesuada purus blandit, dapibus est. Donec dictum dapibus diam tempus luctus. Maecenas lobortis cursus nisl, et convallis orci interdum at. Etiam lacinia tincidunt massa. Curabitur sit amet dolor eu magna condimentum tempus ut eget dolor. Aliquam vehicula mattis ullamcorper. Mauris porta eget tellus eget ultricies. Donec felis magna, imperdiet ac mauris sit amet, maximus vehicula odio. Maecenas vitae nunc non nisi molestie blandit sed vitae lectus. Suspendisse at finibus ex. Fusce accumsan ante faucibus ante porta, sit amet congue lacus venenatis. Sed eu ultricies nisl. Proin sapien urna, molestie eget ullamcorper eget, rhoncus eu ante. Vestibulum non urna vel diam cursus pretium a ut turpis. Nulla cursus neque velit, non pharetra leo commodo a. Proin risus est, convallis nec mauris non, lobortis vulputate nisl. Praesent hendrerit elit in nisl pharetra, a volutpat eros lacinia.
  </div>,
  .c0 {
  padding-top: 4px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  margin-left: 4px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c2"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c3"
        >
          Show much more
          <svg
            aria-hidden="true"
            className="c4 c5 c6"
            direction="down"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots Organisms / ShowMore With Gradient 1`] = `
Array [
  .c0 {
  position: relative;
  overflow: hidden;
  max-height: 100px;
}

.c0::before {
  display: block;
  content: '';
  width: 100%;
  height: 40px;
  position: absolute;
  bottom: 0;
  left: 0;
  margin: 0;
  background: linear-gradient(rgba(255,255,255,0),#FFFFFF);
}

<div
    className="c0"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget pharetra nisi, sed scelerisque lectus. Sed at sem at elit efficitur vestibulum quis id orci. Nunc faucibus enim at nulla porta, vitae luctus lacus fringilla. Cras ut augue pharetra, malesuada purus blandit, dapibus est. Donec dictum dapibus diam tempus luctus. Maecenas lobortis cursus nisl, et convallis orci interdum at. Etiam lacinia tincidunt massa. Curabitur sit amet dolor eu magna condimentum tempus ut eget dolor. Aliquam vehicula mattis ullamcorper. Mauris porta eget tellus eget ultricies. Donec felis magna, imperdiet ac mauris sit amet, maximus vehicula odio. Maecenas vitae nunc non nisi molestie blandit sed vitae lectus. Suspendisse at finibus ex. Fusce accumsan ante faucibus ante porta, sit amet congue lacus venenatis. Sed eu ultricies nisl. Proin sapien urna, molestie eget ullamcorper eget, rhoncus eu ante. Vestibulum non urna vel diam cursus pretium a ut turpis. Nulla cursus neque velit, non pharetra leo commodo a. Proin risus est, convallis nec mauris non, lobortis vulputate nisl. Praesent hendrerit elit in nisl pharetra, a volutpat eros lacinia.
  </div>,
  .c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c5 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #0046FF;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: inline;
  padding: 0;
  color: #0046FF;
  border: none;
  background: transparent;
  overflow: visible;
  -webkit-appearance: none !important;
  cursor: pointer;
  font-weight: inherit;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  margin-left: 4px;
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-expanded={false}
        className="NormalizedButton__Button-ey7f5x-0 c2"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="c3"
        >
          Show much more
          <svg
            aria-hidden="true"
            className="c4 c5 c6"
            direction="down"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <polygon
              points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
]
`;
